--- a/templates/Listing/realtor.html
+++ b/templates/Listing/realtor.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% block content %}
 
-</body>
-</html>
+    {% for realist in realist %}
+      {{ realist.first_name }}  {{ realist.last_name }} {{ realist.name_of_agency }}<br>
+
+    {% endfor %}
+{% endblock %}
